starlark-rust/starlark_syntax/src/lexer_tests/int_lit.fail.golden
# @generated
# To regenerate, run:
# ```
# STARLARK_RUST_REGENERATE_GOLDEN_TESTS=1 cargo test -p starlark --lib
# ```

Program:
x = 01

Error:
error: Parse error: integer cannot have leading 0, got `01`
 --> x:1:5
  |
1 | x = 01
  |     ^^
  |
